<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SQLActivity"
    tools:ignore="MissingConstraints"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="20sp"
        android:gravity="center"
        />

    <Button
        android:id="@+id/createDatabase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/createDatabase"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/textView"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <Button
        android:id="@+id/updateDatabase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/updateDatabase"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/createDatabase"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <Button
        android:id="@+id/insert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/insert"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/updateDatabase"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <Button
        android:id="@+id/update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/insert"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <Button
        android:id="@+id/query"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/query"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/update"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <Button
        android:id="@+id/delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/query"
        app:layout_constraintLeft_toLeftOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>